# git-storyteller

./: .config.example.yaml  .gitignore  .glama.yaml  .pylintrc  Makefile  README.md  analyze_and_tweet.py  pyproject.toml
.github/: CODEOWNERS  branch-protection.json
.github/workflows/: ci.yml  format-check.yml  lint.yml  self-test.yml  storyteller.yml  test.yml
config/: branch-protection.json  default.yaml  watch_list.yaml
scripts/: analyze_and_tweet.py  setup_twitter_login.sh
src/git_storyteller/: __main__.py  config.py
src/git_storyteller/core/: browser_automation.py  git_analyzer.py  learning_system.py  mcp_server.py  self_hype.py  visual_engine.py  webhook_server.py
tests/integration/: README.md  test_analyze_and_tweet.py  test_e2e.py  test_smoke.py  test_watch_list_analyze_and_tweet.py  test_watch_list_e2e.py  test_watch_list_simple.py
